@@ -138,6 +138,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["I am ready."]															= "I am ready."
 	L["I am ready to go."]														= "I am ready to go."
 	L["Leave the Darkpens."]													= "Leave the Darkpens."
+	L["Thank you for your sacrifice."]											= "Thank you for your sacrifice."
 	L["Take us back to Boralus."]												= "Take us back to Boralus."
 	L["Take us back to Zuldazar."]												= "Take us back to Zuldazar."
 	L["<Reach inside and pull something out.>"] 								= "<Reach inside and pull something out.>"
@@ -370,6 +371,20 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Muyani 1"]																= "Take me into the Wailing Caverns."
 	L["Micro Zoox 1"]															= "I'm ready, send me into Gnomeregan!"
 	L["Sean Wilkers 1"]															= "I'm ready, send me into Stratholme!"
+	L["Sevis Brightflame 1"]													= "Sevis, I need to sacrifice you in order to power the final gateway."
+	L["Sevis Brightflame 2"]													= "I'm certain, Sevis. I need to sacrifice you to power the gateway."
+	L["Matron Mother Malevolence 1"]											= "Make them suffer."
+	L["Lady S'theno 1"]															= "Milady, you will take your naga north."
+	L["Battlelord Gaardoun 1"]													= "Stop the mass of their demons from attacking us."
+	L["Jace Darkweaver 1"]														= "I will use my spectral sight to look into the cave."
+	L["Allari the Souleater 1"]													= "Allari, these are the secrets I've uncovered."
+	L["Kayn Sunfury 1"]															= "Kayn, I will teach you what I've learned of the demonic mysteries."
+	L["Kor'vas Bloodthorn 1"]													= "Are you ready to learn the Legion's secrets, Kor'vas?"
+	L["Kor'vas Bloodthorn 2"]													= "Will it be Kayn or Altruis?"
+	L["Cyana Nightglaive 1"]													= "Listen closely, Cyana."
+	L["Mannethrel Darkstar 1"]													= "Mannethrel, prepare yourself."
+	L["Anduin Wrynn 1"]															= "This cannot wait."
+	L["Izal Whitemoon 1"]														= "We're going to get what we came here for."
 	L["Plagued Critters 1"]														= "Extermination Time!"
 	L["Door Control Console 1"]													= "<Pull Random Levers>"
 	L["Torben Zapblast 1"]														= "Send me to the surface, Torben."
